--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,6 +1,6 @@
 @media(max-width: 1200px){
     body{
-        background-color: #f44336;
+        background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(240,58,23,1) 100%);
     }
 
     .bg-video{
@@ -36,9 +36,31 @@
     .header .menu li a:hover {
         background-color: #313339;
     }
+
+    .ilustracoes-filme{
+        max-width: 1000px;
+    }
+   
+    .ilustracoes-filme p{
+        max-width: 1000px;
+        overflow: auto;
+        color: #fff;
+    }
+    .ilustracoes-filme h2{
+        color: #fff;
+    }
+
+    .ilustracoes{
+        display: flex;
+        gap: 1rem;
+        height: 30rem;
+        width: 100%;
+        height: 40%;
+    }
+
 }
 
-@media (max-width: 500px){
+@media (max-width: 688px){
     .header {
         flex-wrap: wrap;
         justify-content: center;
@@ -58,5 +80,34 @@
         width: 300px;
         height: 169px;
     }
+
+    .ilustracoes-filme{
+        max-width: 300px;
+    }
    
+    .ilustracoes-filme p{
+        max-width: 300px;
+        max-height: 350px;
+        overflow: auto;
+        color: #fff;
+    }
+    .ilustracoes-filme h2{
+        color: #fff;
+    }
+
+    .ilustracoes{
+        display: flex;
+        gap: .5rem;
+        height: 30rem;
+        width: 100%;
+        height: 30%;
+    }
+
+    .ilustracoes > div:nth-of-type(8),
+    .ilustracoes > div:nth-of-type(7),
+    .ilustracoes > div:nth-of-type(6),
+    .ilustracoes > div:nth-of-type(4),
+    .ilustracoes > div:nth-of-type(1){
+        display: none;
+    }
 }
