--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,8 @@ html {
     font-size: 1rem;
 
     color: #fff;
+    scroll-behavior: smooth;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 1) 100%);
 }
 
 
@@ -147,4 +149,71 @@ html {
 
 .mario:hover{
     transform: scale(1.05);
+}
+
+.ilustracoes-filme{
+    width: 1440px;
+    margin: 0 auto;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.ilustracoes-filme h2 {
+    text-transform: uppercase;
+    font-size: 48px;
+    color: #a8adb7;
+}
+
+.ilustracoes-filme p{
+    width: 1440px;
+    margin: 30px;
+    text-align: center;
+    color: #a8adb7;
+}
+
+
+.ilustracoes{
+    display: flex;
+    gap: 1rem;
+    height: 30rem;
+    width: 100%;
+    height: 50%;
+    
+}
+
+.ilustracoes > div{
+    flex: 1;
+    border-radius: 1rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    transition: .8s cubic-bezier(0.25, 0.4, 0.45, 1.4);
+}
+
+.ilustracoes > div:hover{
+    flex: 5;
+}
+
+.init-hidden{
+    opacity: 0;
+    transition: opacity 1s linear;
+}
+
+.init-hidden-off{
+    opacity: 1;
+    animation: fade 1s ease-in-out;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
 }
